# pf

./: .gitignore  README.md  flake.nix  meson.build  pf.py  shell.nix
include/: cli.h  image.h  log.h  network.h
src/: cli.c  cli.h  image.c  log.c  main.c  main.h  network.c
tests/: main.c  test_main.c
